# gfnasr

./: .gitignore  dataset.py  pyproject.toml  train.py  utils.py
hparams/: train.yaml
scripts/: cer.sh  get_whisper_audio_emb.py  prepare_data.sh  wer.sh
xps/: bs_sweep.sh  lr_sweep.sh  max_decode_ratio.sh  reward_weight.sh  temp_sweep.sh
