[project]
name = "gfnasr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "editdistance>=0.8.1",
    "h5py>=3.13.0",
    "librosa>=0.11.0",
    "openai-whisper>=20240930",
    "soundfile>=0.13.1",
    "sox>=1.5.0",
    "speechbrain>=1.0.3",
    "torch==2.5",
    "transformers>=4.52.3",
    "wandb>=0.19.11",
]
